--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "devDependencies": {
     "alt": "^0.17.1",
     "babel-eslint": "^3.1.23",
+    "classnames": "^2.1.3",
     "css-loader": "^0.15.2",
     "eslint": "^0.24.1",
     "eslint-plugin-babel": "^1.1.0",
     "eslint-plugin-react": "^2.7.0",
     "extract-text-webpack-plugin": "^0.8.2",
+    "file-loader": "^0.8.4",
     "http-server": "^0.8.0",
     "jsx-loader": "^0.13.2",
     "node-libs-browser": "^0.5.2",
@@ -27,6 +29,7 @@
     "react-hot-loader": "^1.2.8",
     "sass-loader": "^1.0.2",
     "style-loader": "^0.12.3",
+    "url-loader": "^0.5.6",
     "webpack": "^1.10.1",
     "webpack-dev-server": "^1.10.1"
   }
