--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "export NODE_ENV=dev; webpack-dev-server --hot --progress --colors --content-base public",
     "compile": "webpack",
-    "compile-prod": "webpack -p"
+    "compile-prod": "export NODE_ENV=production; webpack -p"
   },
   "dependencies": {
     "babel-core": "^5.6.18",
